@@ -189,9 +189,9 @@ FUNCTION(RELEASE_FEDORA_FEDPKG)
 	SET(CHANGE_SUMMARY "Release ${PROJECT_NAME}-${PRJ_VER}")
     ENDIF("${CHANGE_SUMMARY}" STREQUAL "")
 
-    IF (NOT REDHAT_BUGZILLA STREQUAL "")
+    IF (NOT "${REDHAT_BUGZILLA}" STREQUAL "")
 	LIST(APPEND _cmdOpts "-b" "${REDHAT_BUGZILLA}")
-    ENDIF(NOT REDHAT_BUGZILLA STREQUAL "")
+    ENDIF(NOT "${REDHAT_BUGZILLA}" STREQUAL "")
 
     ADD_CUSTOM_TARGET(fedpkg_build
 	COMMAND ${CMAKE_FEDORA_FEDPKG_EXECUTABLE} -d "${FEDPKG_DIR}"
