@@ -26,3 +26,7 @@ RPM_SPEC_TAG_PADDING=16
 RPM_SPEC_CMAKE_FLAGS="-DCMAKE_FEDORA_ENABLE_FEDORA_BUILD=1"
 RPM_SPEC_MAKE_FLAGS="VERBOSE=1 %{?_smp_mflags}"
 
+#######################################
+# BODHI
+BODHI_BRANCHES=fc20;fc19;el6;el5
+
