@@ -1,3 +1,10 @@
+* Thu Aug 14 2014 Ding-Yi Chen <dchen at redhat.com> - 2.1.2
+- Fixed Bug 1093336 - date(1): -u is much portable than --utc
+- Fixed Bug 1002279 - Project configuration bugs when using cmake-fedora-newprj 
+- ManageVariable: CMAKE_FEDORA_CONF_GET_ALL_VARIABLES are now accepting the same 
+    parameters as SETTING_FILE_GET_ALL_VARIABLES
+- Fixed the bodhi push  as Fedora-21 and EPEL-7 are not yet in bodhi. 
+
 * Tue Aug 12 2014 Ding-Yi Chen <dchen at redhat.com> - 2.1.1
 - Fixed Bug 1093336 - date(1): -u is much portable than --utc
 - Fixed Bug 1002279 - Project configuration bugs when using cmake-fedora-newprj 
